# vault

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline.py  0002_create_users.py  0003_orgs_memberships.py  0004_create_documents.py  0005_create_document_facts.py  (+3 more)
docs/: Architecture.md  Project_State.md  Step_Plan.md
scripts/: __init__.py  run_vault.py
tests/: test_alembic_config.py  test_api_health.py  test_audit_api.py  test_audit_entry_model.py  test_audit_entry_service.py  test_auth_login_api.py  test_auth_login_service.py  test_auth_me_api.py  test_auth_registration_api.py  test_auth_tokens.py  test_config.py  test_control_flag_model.py  test_control_flag_service.py  test_control_flags_api.py  test_current_user_dependency.py  test_database_config.py  test_demo_export_cli.py  test_document_fact_model.py  test_document_fact_service.py  test_document_facts_api.py  test_document_model.py  test_document_read_api.py  test_document_service.py  test_document_storage.py  test_document_upload_api.py  test_duplicate_detection_api.py  test_duplicate_detection_service.py  test_export_api.py  test_export_builders.py  test_final_project_hardening.py  test_organization_access_service.py  test_organization_create_api.py  test_organization_models.py  test_organization_rbac_dependency.py  test_organization_service.py  test_package_import.py  test_passwords.py  test_review_decision_api.py  test_review_decision_model.py  test_review_decision_service.py  (+3 more)
(+61 files in other folders)
