[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "vault"
version = "0.1.0"
description = "Secure accounting document workflow web app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "fastapi",
    "psycopg",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "httpx",
    "mypy",
    "pip-audit",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
